# blake3l

./: .gitignore  Cargo.toml  Makefile  blake3l_x64.s  build.rs
.github/workflows/: make.yml
asm/: blake3.c  blake3.h  blake3_dispatch.c  blake3_impl.h  blake3_portable.c  blake3l.h  blake3l.s  blake3l_arm64_neon.c  blake3l_impl.h  blake3l_x64_avx2.c  main.c
asm/unix-like/: Makefile  blake3_aarch64.s
c/: blake3l.c  blake3l.h  blake3l_arm64_neon.c  blake3l_impl.h  blake3l_x64_avx2.c  blake3l_x64_avx512.c  blake3l_x64_sse2.c  blake3l_x64_sse41.c
c/asm/: Makefile  blake3l_x64_avx512.s  blake3l_x64_sse2.s  blake3l_x64_sse41.s
c/example/: lexample.c
src/: lib.rs
